src/tui/snapshots/skry__tui__render_tests__fleet_filtered_and_sorted.snap
---
source: src/tui/render_tests.rs
expression: t.backend()
---
" skry  8 hosts ● 3 ok  ● 1 deviation  ● 1 warning  ● 1 critical  ● 2 unreachable  so LIVE  every 2s "
"┏ web-1 ━━━━━━━━━━━━━━━━━━━━ ok ┓╭ web-2 ──────────────────── ok ╮                                  "
"┃CPU █████▍···············  25% ┃│CPU ███████▌·············  36% │                                  "
"┃MEM ████████▋············  41% ┃│MEM █████████▎···········  44% │                                  "
"┃DSK ███████████▌·········  55% ┃│DSK ████████████·········  57% │                                  "
"┃LD 1.52 ↓1.3MiB/s ↑489KiB/s    ┃│LD 2.25 ↓1.5MiB/s ↑379KiB/s    │                                  "
"┃                               ┃│                               │                                  "
"┗━━━━━━━━━━━━━━━━━━ @production ┛╰────────────────── @production ╯                                  "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
" 09:00 ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━● now             "
" ←↑↓→ move  Enter details  / filter  f status  o sort  [ ] time  S security  s snapshot  ? help  q q"
