src/tui/snapshots/skry__tui__render_tests__fleet_grid.snap
---
source: src/tui/render_tests.rs
expression: t.backend()
---
" skry  8 hosts ● 3 ok  ● 1 deviation  ● 1 warning  ● 1 critical  ● 2 unreachable  sort:status            LIVE  every 2s "
"┏ legacy-app ━━━ unreachable ┓╭ staging-1 ──── unreachable ╮╭ db-1 ──────────── critical ╮╭ ci-runner ──────── warning ╮"
"┃✖ auth failed               ┃│✖ host key                  ││CPU ████████████████▉·  94% ││CPU ██████████▌·······  58% │"
"┃authentication failed for   ┃│unknown host key for        ││MEM ███████████████▉··  88% ││MEM ████████████······  67% │"
"┃admin@10.0.9.4:22 (tried 2  ┃│staging-1.example.com       ││DSK ████████████▊·····  71% ││DSK ███████████████▏··  84% │"
"┃keys)                       ┃│(SHA256:Zm9vYmFy…); verify  ││LD 26.69 ↓1.1MiB/s ↑317KiB/s││LD 17.71 ↓1.2MiB/s ↑468KiB/s│"
"┃                            ┃│it, then rerun with         ││✖ 1 unit ⚑ 3 security       ││                            │"
"┗━━━━━━━━━━━━━━━━━━━━━━ @ops ┛╰────────────────── @staging ╯╰─────────────── @production ╯╰──────────────────── @build ╯"
"╭ cache-1 ──────── deviation ╮╭ backup ──────────────── ok ╮╭ web-1 ───────────────── ok ╮╭ web-2 ───────────────── ok ╮"
"│CPU █▏················   6% ││CPU █▍················   8% ││CPU ████▋·············  25% ││CPU ██████▌···········  36% │"
"│MEM ███████████▏······  62% ││MEM ███▎··············  18% ││MEM ███████▍··········  41% ││MEM ███████▉··········  44% │"
"│DSK ███████▌··········  42% ││DSK ███████████▍······  63% ││DSK █████████▉········  55% ││DSK ██████████▎·······  57% │"
"│LD 0.02 ↓849KiB/s ↑414KiB/s ││LD 0.34 ↓1.4MiB/s ↑407KiB/s ││LD 1.52 ↓1.3MiB/s ↑489KiB/s ││LD 2.25 ↓1.5MiB/s ↑379KiB/s │"
"│◆ memory z5.9               ││                            ││                            ││                            │"
"╰─────────────── @production ╯╰────────────────────── @ops ╯╰─────────────── @production ╯╰─────────────── @production ╯"
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
" 09:00 ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━● now             "
" ←↑↓→ move  Enter details  / filter  f status  o sort  [ ] time  S security  s snapshot  ? help  q quit                 "
