src/tui/snapshots/skry__tui__render_tests__help_overlay.snap
---
source: src/tui/render_tests.rs
expression: t.backend()
---
" skry  8 hosts ● 3 ok  ● 1 deviation  ● 1 warning  ● 1 critical  ● 2 unreachable  so LIVE  every 2s "
"┏ legacy-app ━━━━━━ unreachable ┓╭ staging-1 ─────── unreachable ╮╭ db-1 ─────────────── critical ╮ "
"┃✖ auth failed                  ┃│✖ host key                     ││CPU ███████████████████▊·  94% │ "
"┃authentication failed for      ┃│unknown host key for           ││MEM ██████████████████▌··  88% │ "
"┃admin@10.0.┌ keys · any key to close ─────────────────────────────────────────────────┐····  71% │ "
"┃keys)      │Fleet                                                                     │17KiB/s   │ "
"┃           │  ←↑↓→ / hjkl           move between tiles                                │          │ "
"┗━━━━━━━━━━━│  Enter                 open host details                                 │roduction ╯ "
"╭ ci-runner │  /                     filter by name or group                           │────── ok ╮ "
"│CPU ███████│  f                     cycle status filter (all, problems, unreachable)  │····   8% │ "
"│MEM ███████│  o                     cycle sort (status, name, cpu, memory, disk)      │····  18% │ "
"│DSK ███████│  S                     security pulse                                    │····  63% │ "
"│LD 17.71 ↓1│Host details                                                              │7KiB/s    │ "
"│           │  Tab / Shift-Tab, 1-5  switch panel                                      │          │ "
"╰───────────│  n / p                 next / previous host                              │──── @ops ╯ "
"╭ web-1 ────│  ↑↓ PgUp PgDn          scroll                                            │            "
"│CPU █████▍·│  Esc                   back to the fleet                                 │            "
"│MEM ███████│Timeline                                                                  │            "
"│DSK ███████│  [ / ]                 one minute back / forward                         │            "
"│LD 1.52 ↓1.│  { / }                 15 minutes back / forward                         │            "
"│           │  L / End               return to live                                    │            "
"╰───────────│Anywhere                                                                  │            "
"            │  s                     incident snapshot (Markdown + JSON)               │            "
"            │  ?                     this help                                         │            "
"            │  q / Ctrl-C            quit                                              │            "
"            └──────────────────────────────────────────────────────────────────────────┘            "
"                                                                                                    "
"                                                                                                    "
" 09:00 ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━● now             "
" ←↑↓→ move  Enter details  / filter  f status  o sort  [ ] time  S security  s snapshot  ? help  q q"
