src/tui/snapshots/skry__tui__render_tests__history_mode_header_and_timeline.snap
---
source: src/tui/render_tests.rs
expression: t.backend()
---
" skry  8 hosts ● 3 ok  ● 1 deviation  ● 1 warning  ● 1 critical  ● 2 unreachable  HISTORY 2026-09-29 11:13:00 (-47m 0s) "
"┏ legacy-app ━━━ unreachable ┓╭ staging-1 ──── unreachable ╮╭ db-1 ──────────── critical ╮╭ ci-runner ──────── warning ╮"
"┃✖ auth failed               ┃│✖ host key                  ││CPU ████████████████▉·  94% ││CPU ██████████▌·······  58% │"
"┃authentication failed for   ┃│unknown host key for        ││MEM ███████████████▉··  88% ││MEM ████████████······  67% │"
"┃admin@10.0.9.4:22 (tried 2  ┃│staging-1.example.com       ││DSK ████████████▊·····  71% ││DSK ███████████████▏··  84% │"
"┃keys)                       ┃│(SHA256:Zm9vYmFy…); verify  ││LD 26.69 ↓1.1MiB/s ↑317KiB/s││LD 17.71 ↓1.2MiB/s ↑468KiB/s│"
"┃                            ┃│it, then rerun with         ││✖ 1 unit ⚑ 3 security       ││                            │"
"┗━━━━━━━━━━━━━━━━━━━━━━ @ops ┛╰────────────────── @staging ╯╰─────────────── @production ╯╰──────────────────── @build ╯"
"                                                                                                                        "
"                                                                                                          rows 1-1 of 2 "
" 09:00 ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━●━━━━━━━━━━━━━━━━━━━━━━━━━ now             "
" ←↑↓→ move  Enter details  / filter  f status  o sort  [ ] time  S security  s snapshot  ? help  q quit                 "
