src/tui/snapshots/skry__tui__render_tests__host_overview.snap
---
source: src/tui/render_tests.rs
expression: t.backend()
---
" skry  8 hosts ● 3 ok  ● 1 deviation  ● 1 warning  ● 1 critical  ● 2 unreachable  sort:status            LIVE  every 2s "
" db-1  critical  deploy@10.0.1.12:22                                                                                    "
" Rocky Linux 9.4 (Blue Onyx) · 6.1.0-25-amd64 x86_64 · up 23d 2h · 8 cores · AMD EPYC 7B13                              "
" 1 Overview │ 2 Processes │ 3 Network & Disks │ 4 Services & Containers │ 5 Security                                    "
"CPU  ██████████████████████████████▏·  94.1% us 66 sy 24 io 5 st │ CPU history ─────────────────────────────────────────"
"MEM  ████████████████████████████▏···  88.0% 14.1 GiB / 16.0 GiB │                                                      "
"SWAP ██······························   6.2% 128 MiB / 2.0 GiB   │ ▂▄▆         ▂▄▆         ▂▄▆         ▂▄▆         ▂▄▆  "
"DISK ██████████████████████▊·········  71.0% /                   │████     ▂▄▆████     ▂▄▆████     ▂▄▆████     ▂▄▆████  "
"LOAD 26.69 24.02 21.35  3.34/core  312 tasks, 2 running          │████ ▂▄▆████████ ▂▄▆████████ ▂▄▆████████ ▂▄▆████████  "
"NET  ↓ 1.1MiB/s  ↑ 317KiB/s                                      │████████████████████████████████████████████████████  "
"                                                                 │ Memory history ──────────────────────────────────────"
"Per core                                                         │                                                      "
"  0 ███████▏  89%   1 ████████ 100%   2 ████████ 100%            │                                                      "
"  3 ███████▍  93%   4 ██████▉·  86%   5 ███████·  87%            │▁▁   ▁▁   ▁▁   ▁▁   ▁▁   ▁▁   ▁▁   ▁▁   ▁▁   ▁▁   ▁▁  "
"  6 ████████ 100%   7 ████████ 100%                              │████████████████████████████████████████████████████  "
"                                                                 │████████████████████████████████████████████████████  "
"▲ cpu 94.1% ≥ 80.0% (warning)                                    │ Hostname   db-1                                      "
"▲ memory 88.0% ≥ 85.0% (warning)                                 │ Address    eth0 10.0.1.12/24                         "
"▲ load_per_core 3.3 ≥ 3.0 (critical)                             │ Procs      212                                       "
"⚑ 1840 failed SSH logins in 24h (top: 198.51.100.23 ×1702, 203.0.│ Units      1 failed                                  "
"⚑ 5 pending security updates (openssl-libs, curl, kernel)        │ Containers 1 running / 1                             "
"⚑ listening on ports outside the allowlist: 5432                 │ Sampled    12:00:00 UTC                              "
"                                                                 │                                                      "
"                                                                 │                                                      "
"                                                                 │                                                      "
"                                                                 │                                                      "
"                                                                 │                                                      "
"                                                                 │                                                      "
"                                                                 │                                                      "
"                                                                 │                                                      "
"                                                                 │                                                      "
"                                                                 │                                                      "
"                                                                 │                                                      "
"                                                                 │                                                      "
" 09:00 ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━● now             "
" Esc back  Tab panel  n/p next/prev host  ↑↓ scroll  [ ] time  s snapshot  ? help  q quit                               "
