src/tui/snapshots/skry__tui__render_tests__host_tab_network.snap
---
source: src/tui/render_tests.rs
expression: t.backend()
---
" skry  8 hosts ● 3 ok  ● 1 deviation  ● 1 warning  ● 1 critical  ● 2 unreachable  sort:status  LIVE  every 2s "
" db-1  critical  deploy@10.0.1.12:22                                                                          "
" Rocky Linux 9.4 (Blue Onyx) · 6.1.0-25-amd64 x86_64 · up 23d 2h · 8 cores · AMD EPYC 7B13                    "
" 1 Overview │ 2 Processes │ 3 Network & Disks │ 4 Services & Containers │ 5 Security                          "
" network                                                                                                      "
"IFACE          RX           TX           RX TOTAL    TX TOTAL    ERR/DROP                                     "
"eth0           1.1MiB/s     317KiB/s     912 GiB     301 GiB     0/0                                          "
" disk I/O                                                                                                     "
"DEVICE         READ         WRITE        R IOPS   W IOPS   UTIL                                               "
"sda            2.3MiB/s     4.9MiB/s     120      340      18%                                                "
" filesystems                                                                                                  "
"MOUNT                     FILESYSTEM            USED       SIZE       USE                                     "
"/                         /dev/sda1             56.0 GiB   80.0 GiB   ████████▌··· 71.0%                      "
"/var/lib/data             /dev/sdb1             210 GiB    500 GiB    █████······· 42.0%                      "
"                                                                                                              "
"                                                                                                              "
"                                                                                                              "
"                                                                                                              "
"                                                                                                              "
"                                                                                                              "
"                                                                                                              "
"                                                                                                              "
"                                                                                                              "
"                                                                                                              "
"                                                                                                              "
"                                                                                                              "
" 09:00 ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━● now             "
" Esc back  Tab panel  n/p next/prev host  ↑↓ scroll  [ ] time  s snapshot  ? help  q quit                     "
