src/tui/snapshots/skry__tui__render_tests__host_tab_processes.snap
---
source: src/tui/render_tests.rs
expression: t.backend()
---
" skry  8 hosts ● 3 ok  ● 1 deviation  ● 1 warning  ● 1 critical  ● 2 unreachable  sort:status  LIVE  every 2s "
" db-1  critical  deploy@10.0.1.12:22                                                                          "
" Rocky Linux 9.4 (Blue Onyx) · 6.1.0-25-amd64 x86_64 · up 23d 2h · 8 cores · AMD EPYC 7B13                    "
" 1 Overview │ 2 Processes │ 3 Network & Disks │ 4 Services & Containers │ 5 Security                          "
" top processes by CPU and memory · 212 total                                                                  "
"PID      USER        CPU%    MEM%   RSS        S   COMMAND                                                    "
"1234     www-data    37.6    2.1    350 MiB    S   nginx                                                      "
"2210     postgres    28.2    18.4   2.9 GiB    S   postgres                                                   "
"981      root        1.2     1.4    230 MiB    S   dockerd                                                    "
"1        root        0.0     0.1    12.0 MiB   S   systemd                                                    "
"                                                                                                              "
"                                                                                                              "
"                                                                                                              "
"                                                                                                              "
"                                                                                                              "
"                                                                                                              "
"                                                                                                              "
"                                                                                                              "
"                                                                                                              "
"                                                                                                              "
"                                                                                                              "
"                                                                                                              "
"                                                                                                              "
"                                                                                                              "
"                                                                                                              "
"                                                                                                              "
" 09:00 ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━● now             "
" Esc back  Tab panel  n/p next/prev host  ↑↓ scroll  [ ] time  s snapshot  ? help  q quit                     "
