src/tui/snapshots/skry__tui__render_tests__host_tab_security.snap
---
source: src/tui/render_tests.rs
expression: t.backend()
---
" skry  8 hosts ● 3 ok  ● 1 deviation  ● 1 warning  ● 1 critical  ● 2 unreachable  sort:status  LIVE  every 2s "
" db-1  critical  deploy@10.0.1.12:22                                                                          "
" Rocky Linux 9.4 (Blue Onyx) · 6.1.0-25-amd64 x86_64 · up 23d 2h · 8 cores · AMD EPYC 7B13                    "
" 1 Overview │ 2 Processes │ 3 Network & Disks │ 4 Services & Containers │ 5 Security                          "
"Listening TCP ports                                                                                           "
"     22  0.0.0.0                                                                                              "
"   5432  0.0.0.0  not in allowlist                                                                            "
"  allowlist: 22, 443                                                                                          "
"                                                                                                              "
"Failed SSH logins (24h)                                                                                       "
"  1840 events from /var/log/secure                                                                            "
"    1702  198.51.100.23                                                                                       "
"     138  203.0.113.9                                                                                         "
"                                                                                                              "
"Pending updates                                                                                               "
"  23 total, 5 security (dnf)                                                                                  "
"  openssl-libs, curl, kernel                                                                                  "
"                                                                                                              "
"                                                                                                              "
"                                                                                                              "
"                                                                                                              "
"                                                                                                              "
"                                                                                                              "
"                                                                                                              "
"                                                                                                              "
"                                                                                                              "
" 09:00 ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━● now             "
" Esc back  Tab panel  n/p next/prev host  ↑↓ scroll  [ ] time  s snapshot  ? help  q quit                     "
