src/tui/snapshots/skry__tui__render_tests__host_tab_services.snap
---
source: src/tui/render_tests.rs
expression: t.backend()
---
" skry  8 hosts ● 3 ok  ● 1 deviation  ● 1 warning  ● 1 critical  ● 2 unreachable  sort:status  LIVE  every 2s "
" db-1  critical  deploy@10.0.1.12:22                                                                          "
" Rocky Linux 9.4 (Blue Onyx) · 6.1.0-25-amd64 x86_64 · up 23d 2h · 8 cores · AMD EPYC 7B13                    "
" 1 Overview │ 2 Processes │ 3 Network & Disks │ 4 Services & Containers │ 5 Security                          "
" systemd                                                                                                      "
"FAILED UNIT                          STATE            DESCRIPTION                                             "
"pg-backup.service                    failed/failed    Nightly PostgreSQL backup                               "
"                                                                                                              "
"                                                                                                              "
"                                                                                                              "
"                                                                                                              "
"                                                                                                              "
"                                                                                                              "
" containers (docker)                                                                                          "
"CONTAINER                     IMAGE                         STATUS                    CPU      MEMORY         "
"api                           ghcr.io/example/api:1.42      Up 3 days                 4.2%     312MiB / 15.6Gi"
"                                                                                                              "
"                                                                                                              "
"                                                                                                              "
"                                                                                                              "
"                                                                                                              "
"                                                                                                              "
"                                                                                                              "
"                                                                                                              "
"                                                                                                              "
"                                                                                                              "
" 09:00 ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━● now             "
" Esc back  Tab panel  n/p next/prev host  ↑↓ scroll  [ ] time  s snapshot  ? help  q quit                     "
